--- a/assets/scss/modules/_hightlight.scss
+++ b/assets/scss/modules/_hightlight.scss
@@ -1,7 +1,7 @@
 .hljs {
   display: block;
   overflow-x: auto;
-  font-size: 0.9em;
+  font-size: 1em;
   background: var(--background-light);
   box-shadow: 0px 0px 2px var(--shadow);
   color: var(--base);
