--- a/assets/scss/tools/_typography.scss
+++ b/assets/scss/tools/_typography.scss
@@ -95,6 +95,14 @@
   src: url('../../fonts/Hanken_Grotesk/HankenGrotesk-VariableFont_wght.ttf');
 }
 
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('../../fonts/JetBrains_Mono/JetBrainsMono-VariableFont_wght.ttf');
+}
+
+// ---------- Jetbrains Mono ----
+
+
 // --- Fira Sans ---
 @font-face {
   font-family: 'Fira Sans';
